--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ license = "MIT"
 # nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
 nu-plugin = "0.94"
 nu-protocol = { version = "0.94", features = ["plugin"] }
+nu-table = "0.94"
+nu-color-config = "0.94"
 skim = { version = "0.10", no_default_features = true }
 
 [dev-dependencies]
