--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ nu-plugin = "0.95"
 nu-protocol = { version = "0.95", features = ["plugin"] }
 nu-table = "0.95"
 nu-color-config = "0.95"
-skim = { version = "0.10", no_default_features = true }
+skim = { package = "two_percent", version = "0.11.15", no_default_features = true }
 
 [dev-dependencies]
 # nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
