--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,7 @@ nu-plugin = "0.96"
 nu-protocol = { version = "0.96", features = ["plugin"] }
 nu-table = "0.96"
 nu-color-config = "0.96"
-#skim = { package = "two_percent", version = "0.11.15", no_default_features = true }
-skim = { package = "two_percent", git = "https://github.com/idanarye/two_percent.git", branch = "make-skim-item-AsAny-again" }
+skim = { package = "two_percent", version = "0.11.17", no_default_features = true }
 
 [dev-dependencies]
 # nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
