--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ license = "MIT"
 # for local development, you can use a path dependency
 # nu-plugin = { path = "../nushell/crates/nu-plugin" }
 # nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
-nu-plugin = "0.97"
-nu-protocol = { version = "0.97", features = ["plugin"] }
-nu-table = "0.97"
-nu-color-config = "0.97"
-skim = { package = "two_percent", version = "0.11.17", no_default_features = true }
+nu-plugin = "0.98"
+nu-protocol = { version = "0.98", features = ["plugin"] }
+#nu-table = "0.98"
+nu-color-config = "0.98"
+skim = { package = "two_percent", version = "0.12", no_default_features = true }
 
 [dev-dependencies]
 # nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
-nu-plugin-test-support = { version = "0.97" }
+nu-plugin-test-support = { version = "0.98" }
