--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ nu-plugin = "0.100"
 nu-protocol = { version = "0.100", features = ["plugin"] }
 #nu-table = "0.99"
 nu-color-config = "0.100"
-skim = { git = "https://github.com/skim-rs/skim.git", branch = "fix/cmd-collector-in-options", no_default_features = true }
+skim = { version = "0.13", no_default_features = true }
 clap = "4"
 
 [dev-dependencies]
