--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ nu-protocol = { version = "0.106", features = ["plugin"] }
 nu-color-config = "0.106"
 skim = { version = "0.20", no_default_features = true }
 clap = "4"
+shlex = "1"
 
 [dev-dependencies]
 # nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
