--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ license = "MIT"
 # nu-plugin = { path = "../nushell/crates/nu-plugin" }
 # nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
 nu-plugin = "0.108"
-nu-protocol = { version = "0.108", features = ["plugin"] }
+nu-protocol = { version = "0.108", features = ["plugin", "sqlite"] }
 #nu-table = "0.99"
 skim = { version = "0.20" }
 nu-color-config = "0.108"
