feat: Upgrade Skim to 1.*.*

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,11 @@ license = "MIT"
 nu-plugin = "0.110"
 nu-protocol = { version = "0.110", features = ["plugin"] }
 #nu-table = "0.99"
-skim = { version = "0.20" }
+skim = { version = "1", default-features = false, features = ["cli"] }
 nu-color-config = "0.110"
 clap = "4"
 shlex = "1"
+ratatui = "0.30"
 
 [dev-dependencies]
 # nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
